# ds_cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  Dockerfile  README.md  requirements.txt
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
{{ cookiecutter.project_slug }}/docker/: Dockerfile
{{ cookiecutter.project_slug }}/docker/scripts/: build_image.py  remove_image.py  run_container.py  run_container.sh
{{ cookiecutter.project_slug }}/experiments/template/: experiment.yml
{{ cookiecutter.project_slug }}/package/: pyproject.toml
{{ cookiecutter.project_slug }}/package/src/{{ cookiecutter.project_slug }}/: __init__.py  config.py  utils.py
{{ cookiecutter.project_slug }}/package/tests/: test_config.py
{{ cookiecutter.project_slug }}/scripts/: test_torch_and_cuda.py  train.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  fromlist.py  language_models.py
